--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.2.0",
+    "@mdi/js": "^5.5.55",
+    "@mdi/react": "^1.4.0",
     "@react-native-community/masked-view": "0.1.5",
-    "@react-navigation/drawer": "^5.4.0",
+    "@react-navigation/drawer": "^5.9.0",
     "@react-navigation/native": "^5.1.3",
-    "@react-navigation/stack": "^5.2.9",
+    "@react-navigation/stack": "^5.9.0",
     "expo": "^36.0.0",
     "react": "16.9.0",
     "react-dom": "16.9.0",
@@ -23,10 +26,11 @@
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-searchbar": "^1.16.0",
     "react-native-snap-carousel": "^3.8.0",
-    "react-native-vector-icons": "^6.6.0",
+    "react-native-vector-icons": "^6.7.0",
     "react-native-web": "^0.11.7",
-    "react-navigation": "^4.3.5",
+    "react-navigation": "^4.4.0",
     "react-navigation-drawer": "^2.4.9",
+    "react-navigation-header-buttons": "^5.0.0",
     "react-navigation-stack": "^2.3.9",
     "react-redux": "^7.1.0"
   },
